fix: text section title align
Fix text section title alignment to center when width is less than 991px

--- a/src/stylesheets/components/text-section.css
+++ b/src/stylesheets/components/text-section.css
@@ -24,7 +24,6 @@
   /* Texts */
   font-size: 1.1rem;
   line-height: 1.5;
-  text-wrap: pretty;
 }
 
 /* Media Queries */
@@ -69,5 +68,11 @@
   .text-section-container.right {
     /* Texts */
     text-align: left;
+  }
+
+  /* Second Grade */
+
+  .text-section-container h2 {
+    text-align: center;
   }
 }
